--- a/src/universidadg8/vistas/JPGuardarMateria.form
+++ b/src/universidadg8/vistas/JPGuardarMateria.form
@@ -138,6 +138,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Borrar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBBorrarGuardarMateriaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="JBGuardarGuardarMateria">
           <Properties>
