--- a/src/universidadg8/vistas/JfIndex.form
+++ b/src/universidadg8/vistas/JfIndex.form
@@ -182,22 +182,6 @@
                                   <Component id="contentAlumno" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="102" attributes="0">
-                                          <Component id="jlIconBorrarAlum" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="JBBorrarAlumno" max="32767" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="jlIconListarAlum" alignment="1" min="-2" max="-2" attributes="0"/>
-                                              <Component id="jlIconBuscarAlumID" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="jbListarAlumnos" max="32767" attributes="0"/>
-                                              <Component id="JBBuscarAlumnoPorID" max="32767" attributes="0"/>
-                                          </Group>
-                                      </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="1" attributes="0">
                                               <Component id="jlIConGuardarAlumno" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -208,7 +192,21 @@
                                               <Component id="jbGuardarAlumno" max="32767" attributes="0"/>
                                               <Component id="jbActualizarAlumno" pref="172" max="32767" attributes="0"/>
                                           </Group>
-                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Group type="103" alignment="0" groupAlignment="0" attributes="0">
+                                                  <Component id="jlIconListarAlum" alignment="1" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="jlIconBuscarAlumID" alignment="1" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Component id="jlIconBorrarAlum" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="JBBorrarAlumno" alignment="0" max="32767" attributes="0"/>
+                                              <Component id="jbListarAlumnos" max="32767" attributes="0"/>
+                                              <Component id="JBBuscarAlumnoPorID" max="32767" attributes="0"/>
+                                          </Group>
                                       </Group>
                                   </Group>
                               </Group>
